--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,10 @@ a {
     transition: color .3s ease;
 }
 
+img {
+    width: 100%;
+}
+
 .container {
     max-width: 1770px;
     margin: 0 auto;
@@ -76,6 +80,30 @@ a {
     color:#FFFFFF;
 }
 
+.about__grid-wrapper__btn {
+    padding: 17px 35px;
+    border: 3px solid var(--main-color);
+    background-color: unset;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.how__info-btn__more,
+.how__info-btn__contract {
+    padding: 20px 38px;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+}
+
+.how__info-btn__contract {
+    margin-left: 29px;
+    padding: 19px 37px;
+    color: #333333;
+    background: unset;
+    border: 1px solid #333333;
+}
+
 /* Header */
 
 .header {
@@ -87,19 +115,19 @@ a {
     display: flex;
 }
 
-.header__logo {
+.logo {
     max-width: 224px;
     max-height: 72px;
     margin-right: auto;
 }
 
-.header__logo-link {
+.logo-link {
     display: block;
     width: 100%;
     height: 100%;
 }
 
-.header__logo-img {
+.logo-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -172,6 +200,7 @@ a {
     height: 15px;
     border-radius: 100%;
     background: rgba(255, 255, 255, 0.4);
+    cursor: pointer;
 }
 
 .dots__item:not(:last-child) {
@@ -199,7 +228,7 @@ a {
 .about__grid {
     margin-top: 50px;
     display: grid;
-    grid-template: repeat(2, minmax(295px, auto)) / 868px 870px;
+    grid-template: repeat(2, 295px) / 868px 870px;
     gap: 32px;
     grid-auto-rows: minmax(295px, auto);
 }
@@ -226,14 +255,6 @@ a {
     color: #FFFFFF;
 }
 
-.about__grid-wrapper__btn {
-    padding: 17px 35px;
-    border: 3px solid var(--main-color);
-    background-color: unset;
-    font-size: 16px;
-    line-height: 20px;
-}
-
 .about__grid-item {
     padding: 65px 118px 65px 131px;
     display: flex;
@@ -242,7 +263,9 @@ a {
 
 .about__grid-icon {
     position: relative;
-    margin-right: 48px;
+    margin-right: 47px;
+    min-width: 120px;
+    max-height: 132px;
 }
 
 .about__grid-icon::before {
@@ -257,6 +280,11 @@ a {
     z-index: -1;
 }
 
+.about__grid-img {
+    height: 100%;
+    object-fit: contain;
+}
+
 .about__grid-title {
     margin-bottom: 9px;
     font-size: 24px;
@@ -268,4 +296,262 @@ a {
     font-size: 16px;
     line-height: 31px;
     font-weight: 400;
+}
+
+/* How */
+
+.how {
+    margin-bottom: 100px;
+}
+
+.how__menu {
+    margin-top: 50px;
+    margin-bottom: 45px;
+}
+
+.how__link {
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+}
+
+.how__link:not(:last-child) {
+    margin-right: 82px;
+}
+
+.how__link-active {
+    color: #E1670E;
+}
+
+.how__grid {
+    display: none;
+}
+
+.how__grid_active {
+    display: flex;
+}
+
+.how__info {
+    margin-right: 140px;
+    display: flex;
+    flex-direction: column;
+}
+
+.how__info-text {
+    margin-bottom: 48px;
+}
+
+.how__info-title {
+    margin-bottom: 9px;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+}
+
+.how__info-descr {
+    font-size: 16px;
+    line-height: 32px;
+    font-weight: 400;
+}
+
+.how__info-buttons {
+    display: inline-block;
+}
+
+.how__info-img {
+    min-width: 870px;
+    max-height: 460px;
+    object-fit: cover;
+}
+
+/* Faq */
+
+.faq {
+    margin-bottom: 100px;
+}
+
+.faq__container__title {
+    margin-bottom: 32px;
+}
+
+.faq__item {
+    padding: 31px 0;
+    border-bottom: 1px solid #CACACA;
+}
+
+.faq__item-first {
+    border-top: 1px solid #CACACA;
+}
+
+.faq__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.faq__title {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+}
+
+.faq__icon {
+    position: relative;
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    background-color: #ECECEC;
+}
+
+.faq__icon::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 31px;
+    height: 1px;
+    background-color: #666666;
+}
+
+.faq__icon::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1px;
+    height: 31px;
+    background-color: #666666;
+}
+
+.faq__descr {
+    display: none;
+    margin-top: 30px;
+    padding-right: 767px;
+    font-size: 16px;
+    line-height: 32px;
+    font-weight: 400;
+}
+
+.faq__descr_active {
+    display: block;
+}
+
+/* Footer */
+
+.footer {
+    background-color: #222222;
+}
+
+.footer__container {
+    padding: 50px 0;
+    display: flex;
+}
+
+.footer__column_first {
+    margin-right: 350px;
+}
+
+.footer__nav {
+    margin-top: 20px;
+}
+
+.footer__nav__list {
+    flex-direction: column;
+}
+
+.footer__nav__item:not(:last-child) {
+    margin-right: 0;
+}
+
+.footer__nav__link {
+    line-height: 36px;
+    color: #CACACA;
+}
+
+.footer__social {
+    margin-top: 90px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__social-item {
+    max-width: 60px;
+    max-height: 60px;
+    object-fit: cover;
+}
+
+.footer__form-title {
+    font-size: 48px;
+    line-height: 59px;
+    font-weight: 400;
+    color: #CACACA;
+}
+
+.form {
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.input {
+    margin-bottom: 25px;
+    padding: 14px 0 14px 24px;
+}
+
+.textarea {
+    margin-bottom: 32px;
+    min-height: 150px;
+    padding: 14px 0 0 24px;
+    text-align-last: left;
+    resize: none;
+}
+
+.input,
+.textarea {
+    font-family: 'Montserrat';
+    background: #414141;
+    border: none;
+    font-size: 16px;
+    line-height: 32px;
+    font-weight: 400;
+    color: #CACACA;
+}
+
+.form__submit {
+    display: flex;
+    align-items: center;
+}
+
+.footer__form-btn {
+    margin-right: 22px;
+    padding: 19px 52px;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.checkbox__label {
+    font-size: 16px;
+    line-height: 32px;
+    font-weight: 400;
+    color: #CACACA;
+}
+
+.footer__column_second {
+    margin-right: 236px;
+}
+
+.footer__column_third {
+    max-width: 363px;
+}
+
+.footer__text {
+    padding: 137px 0;
+    font-size: 16px;
+    line-height: 32px;
+    font-weight: 400;
+    color: #CACACA;
 }
